# tradevision-ai

./: .env.ftmo.amber.example  .env.ftmo.demo1.example  .env.ftmo.demo2.example  .env.ftmo.titanium.example  .env.local.example  .gitignore  .lighthouserc.json  .release-please-config.json  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  RECOVERY.md  RESEARCH_LOG.md  TRADING_RULES.md  eslint.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.strict.json  vitest.config.ts  vitest.scripts.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
e2e/: calculator.spec.ts  csv-import.spec.ts  helpers.ts  import-verify.spec.ts  insights.spec.ts  login-flow.spec.ts  multi-account.spec.ts  navigation.spec.ts  settings.spec.ts  trade-crud.spec.ts  trade-form.spec.ts
engine-rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  PERF_NOTES.md  README.md
engine-rust/ftmo-engine-cli/: Cargo.toml
engine-rust/ftmo-engine-cli/src/: bench.rs  loader.rs  main.rs  sweep.rs
engine-rust/ftmo-engine-core/: Cargo.toml
engine-rust/ftmo-engine-core/benches/: step_bar_throughput.rs
engine-rust/ftmo-engine-core/fuzz/: Cargo.toml
engine-rust/ftmo-engine-core/fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_state_parse.rs
engine-rust/ftmo-engine-core/src/: candle.rs  config.rs  detector_filters.rs  drift.rs  engine.rs  exit.rs  harness.rs  indicators.rs  lib.rs  news.rs  persist.rs  pnl.rs  position.rs  reconcile.rs  result.rs  signal.rs  signals_breakout.rs  signals_forex_mr.rs  signals_meanrev.rs  signals_r28v6.rs  signals_trend.rs  signals_v12.rs  sizing.rs  state.rs  templates.rs  time_util.rs  trade.rs  v5r.rs
engine-rust/ftmo-engine-core/tests/: asset_expansion_sweep.rs  asset_importance_sweep.rs  determinism.rs  dl_attack_sweep.rs  drift_diagnose.rs  drift_summary.rs  golden_runner.rs  integration_passlock.rs  integration_v5r.rs  property_invariants.rs  soak.rs  state_diff.rs
engine-rust/ftmo-engine-core/tests/golden/: README.md  passlock_minimal.json
engine-rust/scripts/: regen-golden-fixtures.sh
public/: manifest.json  robots.txt  sw.js
scripts/: _2StrategyEnsemble.test.ts  _aggressiveSweepHelper.ts  _assetExpansionSweep.ts  _assetSubsetSweep.test.ts  _championBakeOff.test.ts  _championStats.test.ts  _dailyLossAttackAggregate.ts  _dailyLossAttackShard.ts  _ensembleMultiStrategy.test.ts  _forexFxTop3V4Engine.test.ts  _fundedModeProfitTest.test.ts  _liveModeMultiConfigSweep.test.ts  _liveSafeSweepHelper.ts  _liveWrapperAudit.test.ts  _loadForexHistory.ts  _loadForexHistoryLong.ts  _loadFundingRate.ts  _loadOpenInterest.ts  _loadYahooHistory.ts  _macroEvents.ts  _mlOverlayFeatures.ts  _multiStrategyComboShard.ts  _multiTfEnsemble.ts  _passDayUtils.test.ts  _passDayUtils.ts  _quartzAggressiveStress.test.ts  _quartzStep1RiskReduce.test.ts  _quartzStep2NoPause.test.ts  _quartzTargetSweep.test.ts  _r28V5FineTune.test.ts  _r28V5TpFineGrid.test.ts  _r28V6Aggregate.ts  _r28V6ComboShard.ts  _r28V6DeterminismCheck.ts  _r28V6IntradayThrottleShard.ts  _r28V6MaxDays60Shard.ts  _r28V6Plus2Shard.ts  _r28V6ProfitTarget08Shard.ts  (+557 more)
(+346 files in other folders)
