[workspace]
resolver = "2"
members = ["ftmo-engine-core", "ftmo-engine-cli"]
exclude = ["ftmo-engine-core/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Florian"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.10"
csv = "1.3"
# R67-r5 audit: migrated fs2 → fs4 (fs2 unmaintained since 2018, repo
# archived). fs4 is the actively-maintained drop-in replacement.
fs4 = { version = "0.13", features = ["sync"] }
smallvec = { version = "1", features = ["serde"] }
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
