[package]
name = "ftmo-engine-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ftmo-engine"
path = "src/main.rs"

[[bin]]
name = "ftmo-bench"
path = "src/bench.rs"

[[bin]]
name = "ftmo-sweep"
path = "src/sweep.rs"

[dependencies]
ftmo-engine-core = { path = "../ftmo-engine-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
csv.workspace = true
rayon.workspace = true
mimalloc.workspace = true
