[package]
name = "ftmo-engine-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ftmo-engine-core = { path = ".." }
serde_json = "1"

[[bin]]
name = "fuzz_state_parse"
path = "fuzz_targets/fuzz_state_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
test = false
doc = false
bench = false

[workspace]
